--- a/FoodMicroservice/src/main/resources/application.properties
+++ b/FoodMicroservice/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=FoodMicroservice
+# spring.application.name=FoodMicroservice
 spring.jpa.hibernate.ddl-auto=validate
 #spring.jpa.show-sql=true
 
