--- a/FoodMicroservice/src/main/resources/application.properties
+++ b/FoodMicroservice/src/main/resources/application.properties
@@ -15,3 +15,15 @@ server.port=8081
 #server.ssl.key-password=seifseif
 
 
+#enable/disable https
+server.ssl.enabled=true
+# keystore format
+server.ssl.key-store-type=PKCS12
+# keystore location
+server.ssl.key-store=classpath:myKey.p12
+# keystore password
+server.ssl.key-store-password=springboot
+# SSL protocol to use
+server.ssl.protocol=TLS
+# Enabled SSL protocols
+server.ssl.enabled-protocols=TLSv1.2
